--- a/Server/package.json
+++ b/Server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "warehousedb-server",
-  "version": "1.0.2",
+  "version": "v.2024-05-06",
   "description": "",
   "main": "src/app.js",
   "scripts": {
