--- a/Client/package.json
+++ b/Client/package.json
@@ -1,10 +1,11 @@
 {
   "name": "data-warehouse-client",
-  "version": "0.0.0",
+  "version": "v.2024-05-14",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration=production",
+    "build-dev": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
