--- a/Server/package.json
+++ b/Server/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "express-bearer-token": "^2.4.0",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.5",
     "nodemon": "^3.1.0",
-    "oracledb": "^6.4.0",
     "request": "^2.88.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3"
