--- a/.github/workflows/prod-srv-deploy.yml
+++ b/.github/workflows/prod-srv-deploy.yml
@@ -5,6 +5,12 @@ on:
     branches: [main]
     paths:
       - "server/**"
+  pull_request:
+    branches:
+      - main
+    types: [closed]
+    paths:
+      - "server/**"
 
 jobs:
   deploy:
