--- a/.github/workflows/client-srv-deploy.yml
+++ b/.github/workflows/client-srv-deploy.yml
@@ -4,13 +4,7 @@ on:
   push:
     branches: [main]
     paths:
-      - "client/**"
-  pull_request:
-    branches:
-      - main
-    types: [closed]
-    paths:
-      - "client/**"
+      - "Client/**"
 
 jobs:
   deploy:
