--- a/.github/workflows/prod-srv-deploy.yml
+++ b/.github/workflows/prod-srv-deploy.yml
@@ -6,16 +6,12 @@ on:
     paths:
       - "Server/**"
 
-permissions:
-  contents: write
-  actions: write
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Wait for Render Deployment
-        uses: Bounceapp/render-action@330fe789041953f3f0847cf83d038be962037ab7
+        uses: Bounceapp/render-action@0.8.0
         with:
           render-token: ${{ secrets.RENDER_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
