GitHub Actions Permissions

--- a/.github/workflows/prod-srv-deploy.yml
+++ b/.github/workflows/prod-srv-deploy.yml
@@ -6,6 +6,10 @@ on:
     paths:
       - "Server/**"
 
+permissions:
+  contents: read
+  deployments: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
