Add paths to GitHub Actions

--- a/.github/workflows/client-srv-deploy.yml
+++ b/.github/workflows/client-srv-deploy.yml
@@ -3,6 +3,8 @@ name: Update Web-App Deployments
 on:
   push:
     branches: [main]
+    paths:
+      - "Client/**"
 
 permissions:
   contents: read
