--- a/.github/workflows/client-srv-deploy.yml
+++ b/.github/workflows/client-srv-deploy.yml
@@ -60,7 +60,6 @@ jobs:
   deploy:
     needs: [install_and_build]
     runs-on: ubuntu-latest
-    name: Deploy
     permissions:
       contents: read
       deployments: write
@@ -93,8 +92,7 @@ jobs:
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/json" \
             -d '{"state": "success", "description": "Deployment successful", "environment_url": "https://datawarehouse.dylanwarrell.com"}' \
-            https://api.github.com/repos/${{ github.repository }}/deployments/${{ steps.create_deployment.outputs.deployment_id }}/statuses
-      
+            https://api.github.com/repos/${{ github.repository }}/deployments/${{ env.deployment_id }}/statuses
       - name: Update Deployment Status - Failure
         if: failure()
         run: |
@@ -102,4 +100,4 @@ jobs:
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/json" \
             -d '{"state": "failure", "description": "Deployment failed"}' \
-            https://api.github.com/repos/${{ github.repository }}/deployments/${{ steps.create_deployment.outputs.deployment_id }}/statuses
+            https://api.github.com/repos/${{ github.repository }}/deployments/${{ env.deployment_id }}/statuses
